--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/cdanmontoya/BasicExpressServer#readme",
   "dependencies": {
+    "axios": "^0.19.2",
+    "azure-cognitiveservices-imagesearch": "^2.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -28,6 +30,7 @@
     "minimist": "^1.2.5",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
+    "ms-rest-azure": "^3.0.0",
     "sequelize": "^5.21.3",
     "swagger-ui-express": "^4.1.3",
     "yamljs": "^0.3.0"
