--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "lint": "eslint ./ --fix",
-    "test": "jest",
+    "test": "mocha",
     "start": "node app.js"
   },
   "repository": {
@@ -22,16 +22,19 @@
     "axios": "^0.19.2",
     "azure-cognitiveservices-imagesearch": "^2.0.0",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openapi": "^6.0.0",
     "http-status": "^1.4.2",
     "minimist": "^1.2.5",
+    "mocha": "^8.0.1",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
     "ms-rest-azure": "^3.0.0",
     "sequelize": "^5.21.3",
+    "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.3",
     "yamljs": "^0.3.0"
   },
