--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "lint": "eslint ./ --fix",
-    "test": "mocha",
+    "test": "jest --runInBand --forceExit",
     "start": "node app.js"
   },
   "repository": {
@@ -51,5 +51,16 @@
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "should": "^13.2.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
